<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sand_texture"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    android:textAlignment="center" >

    <TextView
        android:id="@+id/aboutHowToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutUs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:gravity="center"
        android:text="@string/about_how_to_play"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="99dp"
        android:contentDescription="@string/submarine_description"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/aboutDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="43dp"
        android:gravity="center"
        android:text="@string/about_description_text"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/aboutUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/GameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/game_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/aboutEmails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:text="@string/aboutEmails"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

</RelativeLayout>
