<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sand_texture"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uprm.rock_a_void.MainMenu" >

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button_layout"
        android:minWidth="500dip"
        android:text="@string/start_game_string"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/buttonAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonRankings"
        android:layout_below="@+id/buttonRankings"
        android:layout_marginTop="37dp"
        android:background="@drawable/button_layout"
        android:minWidth="500dip"
        android:text="@string/about_string"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size" />

    <Button
        android:id="@+id/buttonRankings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonStartGame"
        android:layout_below="@+id/buttonStartGame"
        android:layout_marginTop="31dp"
        android:background="@drawable/button_layout"
        android:minWidth="500dip"
        android:text="@string/rankings_string"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonStartGame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="156dp"
        android:rotation="-30"
        android:text="@string/game_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="48sp" />

</RelativeLayout>